--- a/spec/javascripts/fixtures/backbone_fixture.html
+++ b/spec/javascripts/fixtures/backbone_fixture.html
@@ -1,7 +1,7 @@
 
 <!-- some basic HTML needed for running Jasmine tests -->
 
-<script type=text/javascript">
+<script type="text/javascript">
 // create empty global collections if they don't exist (mostly for jasmine tests)
 window.games_coll = window.games_coll || new Main.Collections.GamesCollection;
 window.teams_coll = window.teams_coll || new Backbone.Collection;
